--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"ghooks": {
-		"post-receive": "npm run build"
+		"post-receive": "git pull origin master"
 	},
 	"repository": {
 		"type": "git",
